# bap_ai

./: COPYRIGHT.txt  LICENSE.txt
examples/: disas_out  out  simple_stack_test.c  stack_example.bir  stack_test.out  test_output  testing_dynamic_allocations.c
lib/: CfaDomain.ml  ImmEnv.ml  abstractDomain.ml  circularLinearProgression.ml  clpDomain.ml  clpDomain.mli  completeLattice.ml  dune  intervalTreeDomain.ml  mapDomain.ml  mapDomain.mli  memoryDomain.ml  memoryDomain.mli  preanalysis.ml  productDomain.ml  productDomain.mli  reducedProduct.ml  reducedProduct.mli  stackAnalysis.ml  valueStore.ml  vsa.ml
plugin/: dune  run_vsa.ml
test/: dune  test.ml  test_interval_tree_domain.ml  test_vsa.ml
