(library
 (name bap_ai)
 (public_name bap_ai)
 (modules
  circularLinearProgression
  mapDomain
  abstractDomain
  cfaDomain
  clpDomain
  immEnv
  memoryDomain
  valueStore
  vsa
  productDomain
  completeLattice
  preanalysis)
 (libraries bap oseq core_kernel zarith)
 (preprocess
  (pps ppx_jane)))

(env
 (dev
  (flags
   (:standard -w -33-27-11-26))))
